...
    
    return  self;
}

- (void)viewDidLoad {
    [super viewDidLoad];
    self.title = @"Splash";
    self.view.backgroundColor = kRGB(245, 245, 245);
    
    [self setupData];
    [self setupUI];
}

...
    NSArray *caches = [[ATAdManager sharedManager] getSplashValidAdsForPlacementID:self.placementID];
    NSLog(@"ValidAds.count:%ld--- ValidAds:%@",caches.count,caches);

    // 判断当前是否存在可展示的广告
    BOOL ready = [[ATAdManager sharedManager] splashReadyForPlacementID:self.placementID];
    
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:ready ? @"Ready!" : @"Not Yet!" message:nil preferredStyle:UIAlertControllerStyleAlert];
    [self presentViewController:alert animated:YES completion:^{
        dispatch_after(dispatch_time(DISPATCH_TIME_NOW, (int64_t)(1.2 * NSEC_PER_SEC)), dispatch_get_main_queue(), ^{
            [alert dismissViewControllerAnimated:YES completion:nil];
        });
    }];
}
...
        [_footView setClickShowBlock:^{
            NSLog(@"点击展示");
            [weakSelf showAd];
        }];
        
        if (![NSStringFromClass([self class]) containsString:@"Auto"]) {
            [_footView.loadBtn setTitle:@"Load Splash AD" forState:UIControlStateNormal];
            [_footView.readyBtn setTitle:@"Is Splash AD Ready" forState:UIControlStateNormal];
            [_footView.showBtn setTitle:@"Show Splash AD" forState:UIControlStateNormal];
        }
    }
    return _footView;
}

- (UIView *)modelBackView {
...
